# RawForge

./: .gitignore  README.md  pyproject.toml
RawForge/: main.py
RawForge/application/: InferenceWorker.py  MODEL_REGISTRY.py  ModelHandler.py  dng_utils.py  postprocessing.py
